Fix pb alignement avec googl chrome

--- a/octopress/_sass/_top_bar.scss
+++ b/octopress/_sass/_top_bar.scss
@@ -17,6 +17,7 @@
  */
 
 #search {
+  width: 200px;
   margin-top: .35em;
   margin-left: 1em;
 }
